--- a/maruthi/style.css
+++ b/maruthi/style.css
@@ -3,7 +3,7 @@ Theme Name: Maruthi
 Theme URI: http://maruthi.vedicthemes.com/landing/
 Author: the DesignThemes team
 Author URI: https://wedesignthemes.com/
-Description: Maruthi WordPress theme for Gym Clubs hioooooooooooooooooo.
+Description: Maruthi WordPress theme for Gym Clubs.
 Version: 3.3
 Tested up to :6.8
 License: GNU General Public License v2 or later
